frontend/test/should_fail/attrib_model_001.gm
node class NBYTE {
	a : byte;
}

node class NSHORT {
	a : short;
}

node class NINT {
	a : int;
}

node class NLONG {
	a : long;
}

node class NBOOL {
	a : boolean;
}

node class NFLOAT {
	a : float;
}

node class NDOUBLE {
	a : double;
}

node class NSTRING {
	a : string;
}

edge class EBYTE {
	a : byte;
}

edge class ESHORT {
	a : short;
}

edge class EINT {
	a : int;
}

edge class ELONG {
	a : long;
}

edge class EBOOL {
	a : boolean;
}

edge class ESTRING {
	a : string;
}

edge class EFLOAT {
	a : float;
}

edge class EDOUBLE {
	a : double;
}
